[gd_scene load_steps=3 format=3 uid="uid://dbdmosh6v536s"]

[ext_resource type="Script" path="res://addons/dialogic/Editor/Settings/settings_accessibility.gd" id="1_4mq0l"]
[ext_resource type="PackedScene" uid="uid://dbpkta2tjsqim" path="res://addons/dialogic/Editor/Common/hint_tooltip_icon.tscn" id="2_7u84i"]

[node name="Accessibility" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4mq0l")

[node name="TimelineTitle" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SectionTimelineTitle" type="Label" parent="TimelineTitle"]
layout_mode = 2
theme_type_variation = &"DialogicSettingsSection"
text = "Visual Timeline"

[node name="HintTooltip" parent="TimelineTitle" instance=ExtResource("2_7u84i")]
layout_mode = 2
texture = null
hint_text = "These settings affect the visual timeline."

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Image preview height"

[node name="HintTooltip" parent="HBoxContainer" instance=ExtResource("2_7u84i")]
layout_mode = 2
tooltip_text = "This is the amount of space between event blocks in the timeline."
texture = null
hint_text = "If set to 0, image previews will be disabled."

[node name="ImagePreviewHeight" type="SpinBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
rounded = true
allow_greater = true
update_on_text_changed = true
suffix = "px"
select_all_on_focus = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Event block bottom margin"

[node name="HintTooltip" parent="HBoxContainer2" instance=ExtResource("2_7u84i")]
layout_mode = 2
tooltip_text = "These settings affect the visual timeline."
texture = null
hint_text = "This adds extra space at the bottom of event blocks. Requires reloading the visual timeline to take effect."

[node name="EventBlockMargin" type="SpinBox" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
rounded = true
allow_greater = true
update_on_text_changed = true
suffix = "px"
select_all_on_focus = true

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer3"]
layout_mode = 2
text = "Show event names in timeline"

[node name="HintTooltip" parent="HBoxContainer3" instance=ExtResource("2_7u84i")]
layout_mode = 2
tooltip_text = "This is the amount of space between event blocks in the timeline."
texture = null
hint_text = "Enabling this prepends the event name at the beginning of event blocks. Requires reloading the visual timeline to take effect."

[node name="ShowEventNames" type="CheckButton" parent="HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
